should have a working app now

--- a/views/index.ejs.html
+++ b/views/index.ejs.html
@@ -17,7 +17,7 @@
     }
   </style>
 </head>
-<body ng-app="flapperNews">
+<body ng-app="storyParser">
   <nav class="navbar navbar-inverse" ng-controller="NavCtrl" style="background-color: #000;">
   <div class="container-fluid">
   <div class="navbar-header">
