--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
-  <script src="javascripts/angularApp.js"></script>
+  <script src="angularApp.js"></script>
   <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
