--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body ng-app="storyParser">
-  <nav class="navbar navbar-inverse" ng-controller="NavCtrl" style="background-color: #000;">
+  <nav class="navbar navbar-inverse" ng-controller="NavCtrl" style="background-color: #4484CE;">
   <div class="container-fluid">
   <div class="navbar-header">
       <a class="navbar-brand" href="#">Story Parser</a>
@@ -39,18 +39,18 @@
     </div>
 
   <script type="text/ng-template" id="/home.html">
-    <div class="container text-center" style="width: 100%;border-radius: 0;background-color: #D2F6EB;">
+    <div class="container text-center" style="width: 100%;border-radius: 0;background-color: #D9D9D9;">
       <br>
       <h1 style="font-size:100px;">Story Parser</h1>
       <br>
 
       <p>Come! Join us write some stories...</p>
       <br>
-      <br>
+    
 
       </div>
     </div>
-    <div class="container text-center" style=" width: 100%; padding: 0; background-color: #f6fceb">
+    <div class="container text-center" style=" width: 100%; padding: 0; background-color: #F9CF00">
     <h1 style="text-align: center;"> Pick A Story To Add To</h1>
   <div class="container text-left" style="padding-left: 35%; ">
     <div ng-repeat="story in stories | orderBy: '-upvotes'">
@@ -69,7 +69,7 @@
     </div>
 <br>
     </div>
-    <div class="container text-center" style=" width: 100%; padding: 0; background-color: #d6dfc2" >
+    <div class="container text-center" style=" width: 100%; padding: 0; background-color: #F19F4D" >
     <h1> Create Your Own Story</h1>
     <div class="container text-center" style="width: 40%; " >
     <form ng-submit="addStory()" ng-show="isLoggedIn()" style="margin-top:10px">
@@ -94,15 +94,14 @@
   </script>
 
   <script type="text/ng-template" id="/stories.html">
-  <div class="container text-center" style=" width: 100%; padding: 0; background-color: #d6dfc2" >
+  <div class="container text-center" style=" width: 100%; padding: 0; background-color: #D9D9D9" >
       <h1>
           {{story.title}}
       </h1>
-      <h4>Description:
-          {{story.description}}
+      <h4>Description:{{story.Description}}
           </h4>
     </div>
-<div class="container text-center" style=" width: 100%; padding: 0; background-color: #d3f" >
+<div class="container text-center" style=" width: 100%; padding: 0; background-color: #F9CF00" >
     <br>
     <p style="font-size:25px;"> So here is the story so far...</p> 
     <div ng-repeat="line in story.lines " style=" margin-left: 40px;margin-right: 40px;">
@@ -113,10 +112,10 @@
     </div>
     <br>
     </div>
-<div class="container text-center" style=" width: 100%; padding: 0; background-color: #d6dfc2" >
+<div class="container text-center" style=" width: 100%; height: 100%; padding: 0; background-color: #F19F4D" >
 <h3>Add a new line to make the story more interesting </h3>
-<p style="color: #d63">Warning: You can only add 50 character per line, so choose your words carefully </p>
-<div class="container text-center" style=" width: 40%; padding: 0; background-color: #d6dfc2" >
+<p style="color: #FFF">Warning: You can only add 50 character per line, so choose your words carefully </p>
+<div class="container text-center" style=" width: 40%; padding: 0; background-color: #F19F4D" >
     <form ng-submit="addLine()" ng-show="isLoggedIn()" >
       
 
@@ -135,14 +134,14 @@
   </script>
   
   <script type="text/ng-template" id="/register.html">
-	  <div class="container text-center" style="width: 100%;border-radius: 0;background-color: #D2F6EB;">
+	  <div class="container text-center" style="width: 100%;border-radius: 0;background-color: #D9D9D9;">
       <br>
       <h1 style="font-size:100px;">Story Parser</h1>
       <br>
       <p>Come! Join us write some stories...</p>
     <br>
     </div>
-  <div class="container text-center" style=" width: 100%; padding: 0; background-color: #d6dfc2" >
+  <div class="container text-center" style=" width: 100%; padding: 0; background-color: #F9CF00" >
 	  <div ng-show="error" class="alert alert-danger row">
 	    <span>{{ error.message }}</span>
 	  </div>
@@ -150,7 +149,7 @@
 	  <form ng-submit="register()"
 	    style="margin-top:30px;">
 	    <h1>Sign Up</h1>
-	<div class="container text-center" style=" width: 40%; padding: 0; background-color: #d6dfc2" >
+	<div class="container text-center" style=" width: 40%; padding: 0; background-color: #F9CF00" >
 	    <div class="form-group"><div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 	      <input type="text"
@@ -172,26 +171,28 @@
 	  </form>
 
     </div>
+    <div style="background-color : #F19F4D ; height: 100%">
+    </div>
 	</script>
 
 
 	<script type="text/ng-template" id="/login.html">
-	  <div class="container text-center" style="width: 100%;border-radius: 0;background-color: #D2F6EB;">
+	  <div class="container text-center" style="width: 100%;border-radius: 0;background-color: #D9D9D9;">
       <br>
 	    <h1 style="font-size:100px;">Story Parser</h1>
       <br>
       <p>Come! Join us write some stories...</p>
 	  <br>
     </div>
-<div class="container text-center" style=" width: 100%; padding: 0; background-color: #d6dfc2" >
+<div class="container text-center" style=" width: 100%; padding: 0; background-color: #F9CF00" >
 	  <div ng-show="error" class="alert alert-danger row">
 	    <span>{{ error.message }}</span>
 	  </div>
 	
 	  <form ng-submit="logIn()"
 	    style="margin-top:30px;">
-	    <h3>Log In</h3>
-	<div class="container text-center" style=" width: 40%; padding: 0; background-color: #d6dfc2" >
+	    <h1>Log In</h1>
+	<div class="container text-center" style=" width: 40%; padding: 0; background-color: #F9CF00" >
 	    <div class="form-group">
       <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -212,8 +213,11 @@
 	  </form>
     </div>
     </div>
+    <div style="background-color: #F19F4D; height:100%;">
+    </div>
 
-  </script>					  
+  </script>	
+
 
   </body>
 </html>
