--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
     </div>
 <br>
     </div>
-    <div class="container text-center" style=" width: 100%; padding: 0; background-color: #F19F4D" >
+    <div class="container text-center" style=" width: 100%; height:100%; padding: 0; background-color: #F19F4D" >
     <h1> Create Your Own Story</h1>
     <div class="container text-center" style="width: 40%; " >
     <form ng-submit="addStory()" ng-show="isLoggedIn()" style="margin-top:10px">
